# VendorRespawnFix-NG

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
include/: VendorRespawnFix-NG.h  main.h  vendor_respawn_manager.h
src/: VendorRespawnFix-NG.cpp  config.cpp  main.cpp  vendor_respawn_manager.cpp
